# esw-utility-scripts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
esw_utility_scripts/: image_resizer.py
files/: config-dist.toml
